Upload-->>ExtractText--->>Chunk

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,4 +12,7 @@ file.upload-dir=C:/Users/eanjiid/git/AI-LLM-integrated-backend/backend/uploads
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 
