--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
-
+python.service.baseUrl=http://localhost:9000
 
